# Belter

./: .gitignore  CMakeLists.txt
scripts/: start.sh
src/: background_system.c  background_system.h  camera_system.c  camera_system.h  components.c  components.h  init_system.c  main.c  physics_system.c  physics_system.h  player_controller_system.c  player_controller_system.h  shape_system.c  shape_system.h
